@@ -13,4 +13,4 @@
 
 __allow_access_to_unprotected_subobjects__ = 1
 
-from zope.sequencesort.ssort import *
+from DocumentTemplate.sequence.SortEx import *
