@@ -4,6 +4,8 @@ Changelog
 2.13.2 (unreleased)
 -------------------
 
+- Restrict the available functions in `DocumentTemplate.sequence` to public
+  API's of `zope.sequencesort`.
 
 2.13.1 (2010-07-15)
 -------------------
